--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,13 @@
             <version>2.11.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.5</version>
+        </dependency>
+
+
 
 
 
