--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,10 @@
 
         <!-- github server corresponds to entry in ~/.m2/settings.xml -->
         <github.global.server>github</github.global.server>
+
+        <slf4j.version>1.7.30</slf4j.version>
+        <log4j.version>2.11.2</log4j.version>
+
     </properties>
 
 
@@ -50,21 +54,20 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+        <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.11.2</version>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
         </dependency>
+
+
 
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.5</version>
         </dependency>
-
-
-
 
 
         <!-- Test dependencies -->
@@ -137,3 +140,4 @@
     </build>
 
 </project>
+
